--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript">
+      setTimeout(() => System.import('App'), 100);
+    </script>
   </body>
 </html>
