--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript">
-      setTimeout(() => System.import('App'), 500);
+      (function tryAgain() {
+        try {
+          System.import('App');
+        } catch(e) {
+          setTimeout(() => tryAgain, 1000);
+        }
+      })();
     </script>
   </body>
 </html>
