--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         try {
           System.import('App');
         } catch(e) {
-          setTimeout(() => tryAgain, 1000);
+          setTimeout(tryAgain, 1000);
         }
       })();
     </script>
