--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>cs-vue-cli-3</title>
+    <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/styles.css">
+    <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/sq-font.css">
     <script type="systemjs-importmap">{"imports":{"orbit-ui/":"//orbit-cdn.weebly.net/ref/v3.17.0/"}}</script>
     <script type="text/javascript" src="//unpkg.com/systemjs@3.0.0/dist/system.min.js"></script>
     <script type="text/javascript" src="//unpkg.com/systemjs@3.0.0/dist/extras/amd.min.js"></script>
