--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cs-vue-cli-3</title>
+    <title>Orbit CodeSandbox</title>
     <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/styles.css">
     <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/sq-font.css">
     <script type="systemjs-importmap">{"imports":{"orbit-ui/":"//orbit-cdn.weebly.net/ref/v3.17.0/"}}</script>
@@ -15,7 +14,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but cs-vue-cli-3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but orbit-codesandbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
