--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Orbit CodeSandbox</title>
-    <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/styles.css">
-    <link rel="stylesheet" href="//orbit-cdn.weebly.net/ref/v3.17.0/sq-font.css">
-    <script type="systemjs-importmap">{"imports":{"orbit-ui/":"//orbit-cdn.weebly.net/ref/v3.17.0/"}}</script>
+    <link rel="stylesheet" href="//orbit.weebly.net/cdn/ref/v3.17.0/styles.css">
+    <link rel="stylesheet" href="//orbit.weebly.net/cdn/ref/v3.17.0/sq-font.css">
+    <script type="systemjs-importmap">{"imports":{"orbit-ui/":"//orbit.weebly.net/cdn/ref/v3.17.0/"}}</script>
     <script type="text/javascript" src="//unpkg.com/systemjs@3.0.0/dist/system.min.js"></script>
     <script type="text/javascript" src="//unpkg.com/systemjs@3.0.0/dist/extras/amd.min.js"></script>
     <script type="text/javascript" src="//unpkg.com/systemjs@3.0.0/dist/extras/named-register.min.js"></script>
